fixed responsiveness on mobile view for property page

--- a/public/style.css
+++ b/public/style.css
@@ -3263,10 +3263,6 @@ html {
   display: none;
 }
 
-.h-3\/4 {
-  height: 75%;
-}
-
 .w-96 {
   width: 24rem;
 }
@@ -3279,20 +3275,16 @@ html {
   width: 100%;
 }
 
+.w-1\/2 {
+  width: 50%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
 
 .w-52 {
   width: 13rem;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .max-w-lg {
@@ -3313,6 +3305,10 @@ html {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .flex-wrap {
@@ -3611,6 +3607,10 @@ body {
     display: none;
   }
 
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
   .lg\:max-w-md {
     max-width: 28rem;
   }
@@ -3625,6 +3625,15 @@ body {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 }
 
